Fixed font on play button being cut off in firefox (#68)

--- a/app/assets/stylesheets/application/play.css
+++ b/app/assets/stylesheets/application/play.css
@@ -92,7 +92,6 @@
     box-shadow: none;
     color: white;
     background-color: #0088cc;
-    padding: 20px;
     margin: 0;
 }
 
